FIX: index画面にメニューを差し込み。編集ボタン押下時の基本イベントを作成

--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -11,17 +11,27 @@
 </head>
  
 <body>
-    <div class="f-container">
-        <div class="sidebar">
-            <div>
-                <nav class="menu">
-                    <ul class="menu_ul">
-                        <li>LIST1</li>
-                        <li>LIST2</li>
-                        <li>LIST3</li>
-                        <li>LIST4</li>
-                    </ul>
-                </nav>
+    <div class="f-container-outer">
+        <div class="f-container">
+            <div class="sidebar">
+                <div>
+                    <nav class="menu">
+                        <ul class="menu_ul">
+                            <li>LIST1</li>
+                            <li>LIST2</li>
+                            <li>LIST3</li>
+                            <li id="menu-edit">EDIT</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <div id="f-container-right" class="f-container-right">
+            <div class="container-canvas">
+
+            </div>
+            <div id="container-edit" class="container-edit" style="display:none;">
+
             </div>
         </div>
     </div>
