--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,2 +1,45 @@
-<canvas id="myChart" width="400" height="400"></canvas>
-<script src="../../build/bundle.js"> </script>
+
+
+
+
+<!doctype html>
+<html>
+ 
+<head>
+  <meta charset="utf-8">
+  <title></title>
+ 
+  <link rel="stylesheet" href="../css/menu.css">
+ 
+</head>
+ 
+<body>
+    <div class="f-container-outer">
+        <div class="f-container">
+            <div class="sidebar">
+                <div>
+                    <nav class="menu">
+                        <ul class="menu_ul">
+                            <li>LIST1</li>
+                            <li>LIST2</li>
+                            <li>LIST3</li>
+                            <li id="menu-edit">EDIT</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <div class="f-container-right">
+            <div id="container-canvas" class="container-canvas">
+                <canvas id="myChart"></canvas>
+            </div>
+            <div id="container-edit" class="container-edit" style="display:none;">
+
+            </div>
+        </div>
+    </div>
+    <script src="../js/menu.js" defer> </script>
+    <script src="../../build/bundle.js" defer> </script>
+</body>
+ 
+</html>
