FIX: 編集画面をフローティングに変更

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,11 +33,13 @@
             <div id="container-canvas" class="container-canvas">
                 <canvas id="myChart"></canvas>
             </div>
-            <div id="container-edit" class="container-edit" style="display:none;">
-
-            </div>
+            
         </div>
     </div>
+    <div id="container-edit" class="container-edit" style="display:none;">
+
+    </div>
+    <div id="bottom-empty"></div>
     <script src="../js/menu.js" defer> </script>
     <script src="../../build/bundle.js" defer> </script>
 </body>
