FIX: 編集画面をボタンで不透明化を切り替えられるよう機能作成

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div id="container-edit" class="container-edit" style="display:none;">
-
+        <div class="flex-right"><button id="transparent-toggle">TRA</button></div>
     </div>
     <div id="bottom-empty"></div>
     <script src="../js/menu.js" defer> </script>
